--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,6 @@ Homepage: https://github.com/lliurex/rebost
 
 Package: rebost-data
 Architecture: all
-Depends: ${misc:Depends}, ${python3:Depends} 
+Depends: ${misc:Depends}, ${python3:Depends}, rebost 
 Description: Appstream metadata for Rebost
  Appstream metadata files
