--- a/filters/lists.d/blacklist/apps/blacklistApps.conf
+++ b/filters/lists.d/blacklist/apps/blacklistApps.conf
@@ -13,5 +13,13 @@ p2pool
 zapdesktop
 demonizer
 aternoscom
-bell-scheduler
-bell-scheduler-installer
+lib*
+n4d*
+python*
+calamares*
+lliurex-auto*
+qml*
+lliurex-grub*
+cdc*
+hodor
+flatlock
