add some unwanted pkgs

--- a/filters/lists.d/blacklist/apps/blacklistApps.conf
+++ b/filters/lists.d/blacklist/apps/blacklistApps.conf
@@ -35,3 +35,23 @@ hodor
 flatlock
 dh-*
 isc-*
+lliurex-statistics
+lliurex-journald*
+lliurex-menus
+lliurex-desktop-*
+lliurex-gdrive-*
+epi-*
+lliurex-on-fire
+lliurex-sddm*
+bell-scheduler-*
+lliurex-common-utils
+kscreen-system-settings
+lliurex-plymouth-theme
+lliurex-firefox-settings
+lliurex-breeze-gtk-theme
+lliurex-guard-*
+lliurex-polkit-settings
+lliurex-access-control-*
+plasma-welcome
+plasmasettings
+gimp-*
