--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Homepage: https://github.com/lliurex/rebost
 
 Package: rebost-data
 Architecture: all
-Depends: ${misc:Depends}, ${python3:Depends}, rebost 
+Depends: ${misc:Depends}, ${python3:Depends}
+Recommends: rebost
 Description: Appstream metadata for Rebost
  Appstream metadata files
